Fix: toggle dark mode button disabled for now Fix: reverted the changes for transaction skeleton Feat: added status option

--- a/src/transactions/AddFilter/Currency.module.css
+++ b/src/transactions/AddFilter/Currency.module.css
@@ -1,8 +1,6 @@
 .parent {
   display: flex;
   width: full;
-  min-height: 395px;
-  justify-content: center;
 }
 
 .container {
